Fixed whitespace.
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14249 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/HTML/NovaBlue/TabbedMenu.css
+++ b/Remotion/Web/Core/Res/HTML/NovaBlue/TabbedMenu.css
@@ -56,11 +56,11 @@ div.tabbedMainMenu span.tabStripTabSeparator
 }
 
 div.tabbedMainMenu span.tabStripTab a
-{  
+{
   border: none;
-	background-color: #DDDDDD;
+  background-color: #DDDDDD;
   background-image: url(../../Image/NovaBlue/TabbedMenuTabBackground.gif);
-  background-repeat: repeat-x;	
+  background-repeat: repeat-x;
   background-position: center;
   color: Black;
   font-size: 120%;
@@ -69,13 +69,13 @@ div.tabbedMainMenu span.tabStripTab a
 
 div.tabbedMainMenu span.tabStripTab a:hover
 {
-	background-color: #FEFFFF;
+  background-color: #FEFFFF;
   background-image: url(../../Image/NovaBlue/TabbedMenuTabBackgroundHover.gif);
-  background-repeat: repeat-x;	
+  background-repeat: repeat-x;
   background-position: top;
   color: Black;
   cursor: pointer;
-	cursor: hand;
+  cursor: hand;
 }
 
 div.tabbedMainMenu span.tabStripTabSelected a
@@ -93,22 +93,19 @@ div.tabbedMainMenu span.tabStripTabSelected a:hover
   background-color: White;
   text-decoration: underline;
   cursor: pointer;
-	cursor: hand;
+  cursor: hand;
 }
 
-div.tabbedMainMenu span.tabStripTab.disabled a,
-div.tabbedMainMenu span.tabStripTab.disabled a:hover
+div.tabbedMainMenu span.tabStripTab.disabled a, div.tabbedMainMenu span.tabStripTab.disabled a:hover
 {
   color: #b0b0b0;
   background-color: #efefef;
-	background-image: none;
-	text-decoration: none;
+  background-image: none;
+  text-decoration: none;
   cursor: default;
 }
 
-div.tabbedMainMenu li span.bottom, 
-div.tabbedMainMenu li span.topLeft, 
-div.tabbedMainMenu li span.topRight
+div.tabbedMainMenu li span.bottom, div.tabbedMainMenu li span.topLeft, div.tabbedMainMenu li span.topRight
 {
   position: absolute;
   font-size: 0.5%;
@@ -116,16 +113,16 @@ div.tabbedMainMenu li span.topRight
 }
 
 div.tabbedMainMenu a span.bottom
-{  
+{
   bottom: 0px;
   left: 0px;
   height: 1px;
-  width: 100%;  
+  width: 100%;
 }
 
 /* Bottom tab border */
 div.tabbedMainMenu span.tabStripTab a span.bottom
-{  
+{
   border-bottom: solid 1px #083779;
 }
 
@@ -135,11 +132,9 @@ div.tabbedMainMenu span.tabStripTabSelected a span.bottom
   border-bottom: solid 1px White;
 }
 
-div.tabbedMainMenu li span.topLeft,
-div.tabbedMainMenu li span.topRight
+div.tabbedMainMenu li span.topLeft, div.tabbedMainMenu li span.topRight
 {
-  display:none;
-  
+  display: none;
   background-image: url(../../Image/NovaBlue/CornerBackgroundBlueTransparentNoBorder.gif);
   background-repeat: no-repeat;
   width: 5px;
@@ -172,13 +167,12 @@ div.tabbedMainMenu li span.anchorBody
 }
 
 /* Non-IE Browsers hack \*/
-html>body div.tabbedMainMenu span.tabStripTabWrapper
+html > body div.tabbedMainMenu span.tabStripTabWrapper
 {
   margin-bottom: 0px; /* Removes an offset between the main menu and the sub menu */
 }
 
-html>body div.tabbedMainMenu span.tabStripTab,
-html>body div.tabbedMainMenu span.tabStripTabSelected
+html > body div.tabbedMainMenu span.tabStripTab, html > body div.tabbedMainMenu span.tabStripTabSelected
 {
   margin-left: 0; /* No separator, no margin required. */
 }
@@ -202,14 +196,12 @@ div.tabbedSubMenu div.tabStripTabsPane span.tabStripTabWrapper
 
 div.tabbedSubMenu span.tabStripTabSeparator
 {
-  display: none;	/* magin-left must be set to 0 in the Non-IE browsers section for tabStripTab and tabStripTabSelected. */
+  display: none; /* magin-left must be set to 0 in the Non-IE browsers section for tabStripTab and tabStripTabSelected. */
 }
 
-div.tabbedSubMenu span.tabStripTab,
-div.tabbedSubMenu span.tabStripTabSelected
-{  
+div.tabbedSubMenu span.tabStripTab, div.tabbedSubMenu span.tabStripTabSelected
+{
   border-right: solid 1px Black;
-
   padding-top: 0.1em;
   padding-bottom: 0.1em;
   padding-left: 0.2em;
@@ -217,20 +209,19 @@ div.tabbedSubMenu span.tabStripTabSelected
 }
 
 div.tabbedSubMenu span.tabStripTab a
-{  
+{
   border: none;
   background-color: White;
   color: Black;
 }
 
-div.tabbedSubMenu span.tabStripTab a:hover,
-div.tabbedSubMenu span.tabStripTabSelected a:hover
+div.tabbedSubMenu span.tabStripTab a:hover, div.tabbedSubMenu span.tabStripTabSelected a:hover
 {
-	background-color: White;	
+  background-color: White;
   color: Black;
   text-decoration: underline;
   cursor: pointer;
-	cursor: hand;
+  cursor: hand;
 }
 
 div.tabbedSubMenu span.tabStripTabSelected a
@@ -241,8 +232,7 @@ div.tabbedSubMenu span.tabStripTabSelected a
   text-decoration: underline;
 }
 
-div.tabbedSubMenu span.tabStripTab.disabled a,
-div.tabbedSubMenu span.tabStripTab.disabled a:hover
+div.tabbedSubMenu span.tabStripTab.disabled a, div.tabbedSubMenu span.tabStripTab.disabled a:hover
 {
   color: #b0b0b0;
   background-color: White;
@@ -251,8 +241,7 @@ div.tabbedSubMenu span.tabStripTab.disabled a:hover
 
 div.tabbedSubMenu span.tabStripTab.disabled img
 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(opacity=1),
-          progid:DXImageTransform.Microsoft.BasicImage(grayscale=0);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(opacity=1), progid:DXImageTransform.Microsoft.BasicImage(grayscale=0);
   -moz-opacity: 1;
 }
 
@@ -266,13 +255,12 @@ div.tabbedSubMenu span.anchorBody
 }
 
 /* Non-IE Browsers hack \*/
-html>body div.tabbedSubMenu div.tabStripTabsPane.empty
+html > body div.tabbedSubMenu div.tabStripTabsPane.empty
 {
   padding-top: 1.8em;
 }
 
-html>body div.tabbedSubMenu span.tabStripTab,
-html>body div.tabbedSubMenu span.tabStripTabSelected
+html > body div.tabbedSubMenu span.tabStripTab, html > body div.tabbedSubMenu span.tabStripTabSelected
 {
   margin-left: 0; /* No separator, no margin required. */
 }
